fixed styles for dark mode

--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -21,6 +21,10 @@
     color: #555;
     margin-bottom: 6px;
 }
+.recipe-list .card h1 {
+    color: #555;
+    font-size: 0.9em;
+}
 .recipe-list .card p {
     color: #999;
     font-size: 0.9em;
@@ -57,6 +61,13 @@
 .recipe-list .card.dark h3,
 .recipe-list .card.dark div {
     color: #e4e4e4;
+}
+.recipe-list .card.dark h1 {
+    color: #e4e4e4;
+    background-color: #333;
+}
+.recipe-list .card.dark a {
+    background: #333;
 }
 .error.dark div
 .error.dark p {
