--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -12,4 +12,5 @@
 .searchbar.dark input, textarea {
     background-color: #333;
     color: #e3e3e3;
+    border: #444;
 }
