--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -49,6 +49,6 @@
     color: #333;
 }
 .create.dark textarea {
-    background-color: #333;
+    background-color: #504f4f;
     color: #e3e3e3;
 }
